Minor formatting and code style fixes